# manhunt-app

./: .gitignore  .prettierignore  .rustfmt.toml  Cargo.toml  README.md  TODO.md  flake.nix  garnix.yaml  justfile
.github/workflows/: ci.yml
backend/: .gitignore  Cargo.toml  tauri.conf.json
backend/capabilities/: default.json
backend/src/: export_types.rs  game.rs  history.rs  lib.rs  lobby.rs  location.rs  main.rs  powerup.rs  profile.rs  profiles.rs  server.rs  state.rs  transport.rs
backend/src/game/: events.rs  location.rs  mod.rs  powerups.rs  settings.rs  state.rs  transport.rs
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  bindings.ts  index.css  main.tsx
frontend/src/components/: App.tsx  EditProfile.tsx  GameScreen.tsx  GameSelection.tsx  JoinLobby.tsx  LobbyScreen.tsx  MenuScreen.tsx  NavButton.tsx  SetupScreen.tsx
frontend/src/components/menu/: CreateGame.tsx  EditProfile.tsx  JoinLobby.tsx  MenuScreen.tsx  NavButton.tsx
frontend/src/lib/: hooks.ts  result.ts
manhunt-app/: Cargo.toml
manhunt-app/src/: export_types.rs  history.rs  lib.rs  location.rs  state.rs
manhunt-logic/: Cargo.toml
manhunt-logic/src/: game.rs  game_events.rs  game_state.rs  lib.rs  lobby.rs  location.rs  powerups.rs  profile.rs  settings.rs  tests.rs  transport.rs
manhunt-signaling/: Cargo.toml  main.rs
manhunt-signaling/src/: main.rs  state.rs  topology.rs
manhunt-testing/: Cargo.toml
manhunt-testing/src/: daemon.rs  driver.rs  lib.rs
manhunt-transport/: Cargo.toml
manhunt-transport/src/: lib.rs  matchbox.rs  packets.rs  server.rs
nix/checks/: frontend-lint.nix  types-sync.nix
