[package]
name = "manhunt-app"
version = "0.1.0"
description = "A mobile app for playing the game \"manhunt\""
authors = ["Ben C <bwc9876@gmail.com>"]
edition = "2021"

[lib]
name = "manhunt_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "now"] }
tokio = { version = "1.45", features = ["sync", "macros", "time", "fs"] }
rand = { version = "0.9", features = ["thread_rng"] }
tauri-plugin-geolocation = "2.2"
rand_chacha = "0.9.0"
futures = "0.3.31"
matchbox_socket = "0.12.0"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
rmp-serde = "1.3.0"
tauri-plugin-store = "2.2.0"
specta = { version = "=2.0.0-rc.22", features = ["chrono", "uuid"] }
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
specta-typescript = "0.0.9"
