[package]
name = "manhunt-app"
version = "0.1.0"
description = "A mobile app for playing the game \"manhunt\""
authors = ["Ben C <bwc9876@gmail.com>"]
edition = "2021"
default-run = "manhunt-app"

[lib]
name = "manhunt_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "export-types"
path = "src/export_types.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.45", features = ["sync", "macros", "time", "fs"] }
tauri-plugin-geolocation = "2"
tauri-plugin-store = "2.2.0"
specta = { version = "=2.0.0-rc.22", features = ["chrono", "uuid", "export"] }
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
specta-typescript = "0.0.9"
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
log = "0.4.27"
anyhow = "1.0.98"
tauri-plugin-dialog = "2"
manhunt-logic = { version = "0.1.0", path = "../manhunt-logic" }
manhunt-transport = { version = "0.1.0", path = "../manhunt-transport" }
uuid = { version = "1.17.0", features = ["serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
