[package]
name = "manhunt-logic"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
chrono = { version = "0.4.43", features = ["serde", "now"] }
rand = { version = "0.10.0", features = ["thread_rng"] }
rand_chacha = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
specta = { version = "=2.0.0-rc.22", features = ["uuid", "chrono", "derive"] }
tokio = { version = "1.49.0", features = ["macros", "rt", "sync", "time", "test-util"] }
tokio-util = "0.7.18"
uuid = { version = "1.21.0", features = ["serde", "v4"] }
