[package]
name = "manhunt-signaling"
version = "0.1.0"
edition = "2024"
default-run = "manhunt-signaling"

[[bin]]
name = "manhunt-signaling"
path = "main.rs"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["ws"] }
colog = "1.3.0"
futures = "0.3.31"
log = "0.4.27"
matchbox_protocol = "0.12.0"
matchbox_signaling = "0.12.0"
tokio = { version = "1.45.1", features = ["macros"] }
