[package]
name = "manhunt-signaling"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["ws"] }
colog = "1.4.0"
futures = "0.3.32"
log = "0.4.29"
matchbox_protocol = "0.14.0"
matchbox_signaling = "0.14.0"
rand = { version = "0.10.0", features = ["thread_rng"] }
tokio = { version = "1.49.0", features = ["macros"] }
tokio-util = "0.7.18"
uuid = "1.21.0"
