[package]
name = "manhunt-testing"
version = "0.1.0"
edition = "2024"

[lib]
name = "manhunt_test_shared"
path = "src/lib.rs"

[[bin]]
name = "manhunt-test-daemon"
path = "src/daemon.rs"

[[bin]]
name = "manhunt-test-driver"
path = "src/driver.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
interprocess = { version = "2.2.3", features = ["tokio"] }
manhunt-logic = { version = "0.1.0", path = "../manhunt-logic" }
manhunt-transport = { version = "0.1.0", path = "../manhunt-transport" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["macros", "sync", "time", "rt", "test-util", "signal"] }
