[package]
name = "manhunt-transport"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
futures = "0.3.31"
log = "0.4.27"
matchbox_protocol = "0.12.0"
matchbox_socket = "0.12.0"
rmp-serde = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["macros", "sync", "time", "rt"] }
tokio-util = "0.7.15"
uuid = { version = "1.17.0", features = ["serde"] }
manhunt-logic = { version = "0.1.0", path = "../manhunt-logic" }
rand = { version = "0.9.1", features = ["thread_rng"] }
reqwest = { version = "0.12.20", default-features = false, features = ["charset", "http2", "rustls-tls", "system-proxy"] }
const-str = "0.6.2"
