[package]
name = "manhunt-transport"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
futures = "0.3.32"
log = "0.4.29"
matchbox_protocol = "0.14.0"
matchbox_socket = "0.14.0"
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["macros", "sync", "time", "rt"] }
tokio-util = "0.7.18"
uuid = { version = "1.21.0", features = ["serde"] }
manhunt-logic = { version = "0.1.0", path = "../manhunt-logic" }
rand = { version = "0.10.0", features = ["thread_rng"] }
reqwest = { version = "0.13.2", default-features = false, features = ["charset", "http2", "default-tls", "system-proxy"] }
const-str = "1.1.0"
